test: fix service tests and implementing AdminServiceTest